<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewNoSending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noEnvios"
        android:visibility="visible"
        android:textSize="20sp"
        android:padding="10dp" />

    <ListView android:id="@+id/listViewTailSending"
        android:scrollingCache="true"
        android:smoothScrollbar="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottomLayout"/>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true" android:id="@+id/bottomLayout">

        <Button
            android:id="@+id/buttonDeleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deleteAll"/>

        <Button
            android:id="@+id/cancelDeleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

    </LinearLayout>

</RelativeLayout>