<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hermessensorcollector.lbd.udc.es.hermessensorcollector.MainActivity2"
    tools:showIn="@layout/activity_main2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView android:text="@string/no_sensor_type_linear_acceleration"
            android:id="@+id/no_sensor_details"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal" android:textSize="16dip"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:paddingRight="6dip"
            android:textStyle="bold" android:typeface="normal" />

        <TextView
            android:id="@+id/textViewTituloSensorCollector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/sensorCollector"
            android:textSize="@dimen/categoriaConfiguracion"
            android:textStyle="bold" />

        <LinearLayout android:id="@+id/sensor_collector_name_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/sensor_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="sensor_collector_name"
                android:id="@+id/sensor_collector_name" />
        </LinearLayout>

        <LinearLayout android:id="@+id/event_delay_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/eventDelay_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="event_delay"
                android:id="@+id/event_delay" />
        </LinearLayout>

        <LinearLayout android:id="@+id/event_sensor_stored_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/eventsStored_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="event_sensor_stored"
                android:id="@+id/event_sensor_stored" />
        </LinearLayout>

        <LinearLayout android:id="@+id/packets_sensor_stored_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/packedStored_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="packets_sensor_stored"
                android:id="@+id/packets_sensor_stored" />
        </LinearLayout>

        <LinearLayout android:orientation="vertical"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
            android:layout_marginTop="6dip" android:id="@+id/data_values">
        </LinearLayout>

        <TextView
            android:id="@+id/textViewTituloPositionCollector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/positionCollector"
            android:textSize="@dimen/categoriaConfiguracion"
            android:textStyle="bold" />

        <LinearLayout android:id="@+id/position_collector_name_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/sensor_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="position_collector_name"
                android:id="@+id/position_collector_name" />
        </LinearLayout>

        <LinearLayout android:id="@+id/event_position_stored_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/eventsStored_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="event_position_stored"
                android:id="@+id/event_position_stored" />
        </LinearLayout>

        <LinearLayout android:id="@+id/packets_position_stored_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/packedStored_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="packets_position_stored"
                android:id="@+id/packets_position_stored" />
        </LinearLayout>

        <LinearLayout android:id="@+id/last_position_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/lastPosition_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="last_position"
                android:id="@+id/last_position" />
        </LinearLayout>

        <LinearLayout android:id="@+id/latitude_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/latitude_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="latitude"
                android:id="@+id/latitude" />
        </LinearLayout>

        <LinearLayout android:id="@+id/longitude_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/longitude_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="longitude"
                android:id="@+id/longitude" />
        </LinearLayout>

        <LinearLayout android:id="@+id/speed_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/speed_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="speed"
                android:id="@+id/speed" />
        </LinearLayout>

        <LinearLayout android:id="@+id/accuracy_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/accuracy_tag"
                android:textColor="@color/sensor_attributes" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="accuracy"
                android:id="@+id/accuracy" />
        </LinearLayout>



        <Button android:id="@+id/buttonDataCollection" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
            android:text="@string/start" />
    </LinearLayout>
</ScrollView>